(v. 1.0.5 IN PROGRESS)
 - change line 180 in prep_file.php to .= instead of = ; this allows for multiple items with the same call number; previous versions disappeared subsequent items with duplicate call numbers
 - update innreach_check.php: call DOM parser with $path_main instead of ./ in the path -- works more reliably in some environments 
 - updated upload.php to fail verbosely when file is empty

v. 1.0.4
 - added DeleteTable function to controller.php (deletes main data table, plus the associated text files on the server and the related line from the controller mysql table)
 - added delete.png to to the images/ folder
 - added changelog

v. 1.0.3
 - added a document-relative path where there had been a previously root-relative one in innreach_check.php

v. 1.0.2 
 - fixed a spot where the database name was hard-coded as 'weeding' instead of $MYSQL_DB in line 48 of mysql_connect.php

v. 1.0.1
 - first release version, bugs and all!